--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- (Paste this full version into your index.html if you want a complete copy) -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,7 +13,6 @@
       color: #333;
     }
 
-    /* Navbar */
     header {
       background-color: #212529;
       color: white;
@@ -23,7 +23,6 @@
       letter-spacing: 1px;
     }
 
-    /* Hero Section */
     .hero {
       padding: 50px 20px;
       text-align: center;
@@ -55,7 +54,6 @@
       background-color: #0056b3;
     }
 
-    /* Shop Info Section */
     #shopInfo {
       display: none;
       padding: 40px 20px;
@@ -80,6 +78,7 @@
       font-size: 20px;
       font-weight: bold;
       color: #007bff;
+      text-align: center;
     }
 
     footer {
@@ -118,12 +117,14 @@
     </div>
 
     <div class="contact">
-      📞 Contact Number: +91-7720866868
+      📞 Contact Number: +91-7720866868 <br>
+      👤 Owner: <strong>Abhijeet Gaikwad</strong>
     </div>
   </section>
 
   <footer>
-    © 2025 Swarajya — The Perfect Men's Store. All rights reserved.
+    © 2025 Swarajya — The Perfect Men's Store. All rights reserved. <br>
+    Designed & Maintained by <strong>Abhijeet Gaikwad</strong>
   </footer>
 
   <script>
@@ -136,4 +137,3 @@
 
 </body>
 </html>
-
