--- a/index.html
+++ b/index.html
@@ -1,84 +1,106 @@
-<!-- (Paste this full version into your index.html if you want a complete copy) -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Swarajya — The Perfect Men's Store</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
+      font-family: 'Inter', sans-serif;
       margin: 0;
-      background-color: #f8f9fa;
+      background-color: #f4f6f9;
       color: #333;
+      line-height: 1.6;
     }
 
     header {
       background-color: #212529;
       color: white;
-      padding: 15px 30px;
+      padding: 20px;
       text-align: center;
-      font-size: 24px;
-      font-weight: bold;
-      letter-spacing: 1px;
+      font-size: 28px;
+      font-weight: 600;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.15);
     }
 
     .hero {
-      padding: 50px 20px;
+      padding: 60px 20px 40px;
       text-align: center;
       background-color: #ffffff;
     }
 
     .hero h1 {
-      font-size: 36px;
+      font-size: 42px;
       margin-bottom: 10px;
+      color: #212529;
     }
 
     .hero p {
-      font-size: 18px;
+      font-size: 20px;
       color: #555;
+      max-width: 600px;
+      margin: 0 auto 30px;
     }
 
     button {
-      padding: 12px 24px;
+      padding: 14px 30px;
       font-size: 16px;
       background-color: #007bff;
       color: white;
       border: none;
       border-radius: 6px;
       cursor: pointer;
-      margin-top: 25px;
+      transition: background-color 0.3s ease, transform 0.2s ease;
     }
 
     button:hover {
       background-color: #0056b3;
+      transform: scale(1.05);
     }
 
     #shopInfo {
       display: none;
-      padding: 40px 20px;
-      background-color: #fff;
+      padding: 50px 20px;
+      background-color: #ffffff;
     }
 
     .gallery {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
       gap: 20px;
       margin-top: 30px;
     }
 
     .gallery img {
       width: 100%;
-      border-radius: 8px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .gallery img:hover {
+      transform: scale(1.03);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.15);
     }
 
     .contact {
-      margin-top: 40px;
-      font-size: 20px;
-      font-weight: bold;
-      color: #007bff;
+      margin-top: 50px;
       text-align: center;
+      background-color: #f1f3f5;
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 3px 10px rgba(0,0,0,0.08);
+      max-width: 600px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    .contact strong {
+      display: block;
+      font-size: 20px;
+      margin-top: 10px;
+      color: #007bff;
     }
 
     footer {
@@ -87,7 +109,16 @@
       background-color: #212529;
       color: white;
       font-size: 14px;
-      margin-top: 40px;
+      margin-top: 60px;
+    }
+
+    @media (max-width: 600px) {
+      .hero h1 {
+        font-size: 32px;
+      }
+      .hero p {
+        font-size: 16px;
+      }
     }
   </style>
 </head>
@@ -99,8 +130,8 @@
 
   <section class="hero">
     <h1>Welcome to Swarajya</h1>
-    <p>Where Style Meets Tradition — Premium Men’s Wear at Affordable Prices</p>
-    <button onclick="showShopInfo()">View Shop & Contact</button>
+    <p>Blending Elegance & Tradition — Premium Men's Fashion at Fair Prices</p>
+    <button onclick="showShopInfo()">View Shop & Contact Info</button>
   </section>
 
   <section id="shopInfo">
@@ -117,14 +148,15 @@
     </div>
 
     <div class="contact">
-      📞 Contact Number: +91-7720866868 <br>
-      👤 Owner: <strong>Abhijeet Gaikwad</strong>
+      📍 <strong>Shop Location:</strong> Lalchand Nagar, A/P Kedgaon Station, Tal_Daund, Dist_Pune, 412203<br>
+      📞 <strong>Contact:</strong> +91-7720866868<br>
+      👤 <strong>Proprietor:</strong> Abhijeet Gaikwad
     </div>
   </section>
 
   <footer>
     © 2025 Swarajya — The Perfect Men's Store. All rights reserved. <br>
-    Designed & Maintained by <strong>Abhijeet Gaikwad</strong>
+    Website designed & maintained by <strong>Abhijeet Gaikwad</strong>
   </footer>
 
   <script>
